Add additional APIs, tweak existing
